# LilyAi

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  THIRD_PARTY_NOTICES.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: billing.py  leads.py
backend/app/api/webhooks/: calcom.py  stripe.py  twilio_voice.py
backend/app/core/: config.py  deps.py  feature_flags.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/migrations/: alembic.ini  env.py
backend/app/integrations/: google_calendar_client.py  s3_client.py  twilio_client.py
backend/app/models/: __init__.py  attribution.py  booking.py  channel_account.py  conversation.py  enums.py  lead.py  message.py  pricebook.py  quote.py  review.py  settings.py  subscription.py  tenant.py  user.py
backend/app/services/: auth_service.py  jitter_queue.py  plan_service.py  quoting_service.py  stripe_service.py
backend/app/workers/: worker.py
backend/tests/: test_quoting_service.py  test_stripe_webhook.py  test_twilio_missed_call.py
docs/: API.md  ARCHITECTURE.md  INTEGRATIONS.md
infra/: .env  compose.core.yml  compose.satellites.yml
web/: Dockerfile  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/billing/: page.tsx
web/src/lib/: api.ts
