[project]
name = "lily-saas-backend"
version = "1.0.0"
description = "Lily AI SaaS Backend for Pressure Washing Businesses"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "httpx==0.26.0",
    "stripe==7.10.0",
    "twilio==8.11.0",
    "boto3==1.34.14",
    "pillow==10.2.0",
    "celery==5.3.4",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "tenacity==8.2.3",
    "structlog==24.1.0",
    "python-dotenv==1.0.0",
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "isort==5.13.2",
    "ruff==0.1.9",
    "mypy==1.8.0",
    "types-python-dateutil==2.8.19",
    "types-pytz==2023.3.1.1",
    "faker==22.0.0",
    "factory-boy==3.3.0",
    "httpx==0.26.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "N", "B", "C90"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"